RESOLVED FIXED295750
updateDisplayEDRHeadroom does not need to call forceRepaintAllFrames
https://bugs.webkit.org/show_bug.cgi?id=295750
Summary updateDisplayEDRHeadroom does not need to call forceRepaintAllFrames
Mike Wyrzykowski
Reported 2025-07-10 15:50:49 PDT
updateDisplayEDRHeadroom does not need to call forceRepaintAllFrames
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-10 15:51:14 PDT
Mike Wyrzykowski
Comment 2 2025-07-10 15:53:39 PDT
EWS
Comment 3 2025-07-10 18:08:20 PDT
Committed 297236@main (820161a65a2a): <https://commits.webkit.org/297236@main> Reviewed commits have been landed. Closing PR #47856 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.