updateDisplayEDRHeadroom does not need to call forceRepaintAllFrames https://bugs.webkit.org/show_bug.cgi?id=295750 radar://155565966

Reviewed by Matt Woodrow.

Some inter-dependent changes resulted in this call appearing
to be needed at one point, but it should have never been
needed and is no longer necessary.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::updateDisplayEDRSuppression):

Canonical link: https://commits.webkit.org/297236@main