Source/WebCore/page/Page.cpp
@@ -1725,7 +1725,6 @@ void Page::screenPropertiesDidChange()
 #endif
 #if HAVE(SUPPORT_HDR_DISPLAY)
     updateDisplayEDRHeadroom();
-    updateDisplayEDRSuppression();
 #endif
 
     updateScreenSupportedContentsFormats();
@@ -5858,17 +5857,6 @@ void Page::updateDisplayEDRHeadroom()
     });
 }
 
-void Page::updateDisplayEDRSuppression()
-{
-    bool suppressEDR = suppressEDRForDisplay(m_displayID);
-    if (suppressEDR == m_suppressEDR)
-        return;
-
-    LOG_WITH_STREAM(HDR, stream << "Page " << this << " updateDisplayEDRSuppression " << m_suppressEDR << " to " << suppressEDR);
-    m_suppressEDR = suppressEDR;
-
-    forceRepaintAllFrames();
-}
 #endif
 
 } // namespace WebCore
